Serie2/Questao3b/y.output
Terminais sem uso na gramática

   INVAL


Gramática

    0 $accept: E $end

    1 E: WHILE E DO E
    2  | Exp

    3 Exp: ID EQ Term
    4    | Term

    5 Term: Term MAIS ID
    6     | ID


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
ID (258) 3 5 6
DO (259) 1
WHILE (260) 1
EQ (261) 3
MAIS (262) 5
INVAL (263)


Não terminais com as regras onde eles aparecem

$accept (9)
    à esquerda: 0
E (10)
    à esquerda: 1 2, à direita: 0 1
Exp (11)
    à esquerda: 3 4, à direita: 2
Term (12)
    à esquerda: 5 6, à direita: 3 4 5


Estado 0

    0 $accept: . E $end

    ID     deslocar, e ir ao estado 1
    WHILE  deslocar, e ir ao estado 2

    E     ir ao estado 3
    Exp   ir ao estado 4
    Term  ir ao estado 5


Estado 1

    3 Exp: ID . EQ Term
    6 Term: ID .

    EQ  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 6 (Term)


Estado 2

    1 E: WHILE . E DO E

    ID     deslocar, e ir ao estado 1
    WHILE  deslocar, e ir ao estado 2

    E     ir ao estado 7
    Exp   ir ao estado 4
    Term  ir ao estado 5


Estado 3

    0 $accept: E . $end

    $end  deslocar, e ir ao estado 8


Estado 4

    2 E: Exp .

    $padrão  reduzir usando a regra 2 (E)


Estado 5

    4 Exp: Term .
    5 Term: Term . MAIS ID

    MAIS  deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 4 (Exp)


Estado 6

    3 Exp: ID EQ . Term

    ID  deslocar, e ir ao estado 10

    Term  ir ao estado 11


Estado 7

    1 E: WHILE E . DO E

    DO  deslocar, e ir ao estado 12


Estado 8

    0 $accept: E $end .

    $padrão  aceitar


Estado 9

    5 Term: Term MAIS . ID

    ID  deslocar, e ir ao estado 13


Estado 10

    6 Term: ID .

    $padrão  reduzir usando a regra 6 (Term)


Estado 11

    3 Exp: ID EQ Term .
    5 Term: Term . MAIS ID

    MAIS  deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 3 (Exp)


Estado 12

    1 E: WHILE E DO . E

    ID     deslocar, e ir ao estado 1
    WHILE  deslocar, e ir ao estado 2

    E     ir ao estado 14
    Exp   ir ao estado 4
    Term  ir ao estado 5


Estado 13

    5 Term: Term MAIS ID .

    $padrão  reduzir usando a regra 5 (Term)


Estado 14

    1 E: WHILE E DO E .

    $padrão  reduzir usando a regra 1 (E)
